@@ -8,7 +8,6 @@
 <use>
 	<flag name='aio'>Enable aio support</flag>
 	<flag name='debug'>Enable the debugging logging</flag>
-	<flag name='mp4'>Add 3rd party module for MP4 stream</flag>
 	<flag name='rrd'>Enadle 3rd party rrd module</flag>
 	<flag name='chunk'>Enadle 3rd party chunk module</flag>
 	<flag name='libatomic'>Force libatomic_ops library usage:atomic memory
